# mysqlshard

./: .gitignore  MANIFEST.in  README.md  build.sh  entry_points.cfg  files.txt  setup.cfg  setup.py
app/: Dockerfile  ENV  NODE1DATABASE  NODE1IP  build.sh  db.py  delete.sh  fast.py  get_test.sh  insert.py  main.py  requirements.txt  run.sh  start.sh  test.sh  update  var.sh
docs/: cons_add.drawio
init.d/: init.sql
node/: Makefile  NODE1IP  NODE1OPS  NODE2IP  NODE2OPS  NODE3IP  NODE3OPS  NODE4IP  NODE4OPS  NODE5IP  bash.sh  build.sh  delete.sh  hash.sh  run.sh  var.sh
node1/: Dockerfile  Dockerfile.in  Makefile  bash.sh  build.sh  delete.sh  hash.sh  run.sh
node1/init.d/: init.sql
node2/: Dockerfile.in  Makefile  NODE2IP  bash.sh  build.sh  delete.sh  hash.sh  run.sh
node3/: Dockerfile  Dockerfile.in  NODE3IP  bash.sh  build.sh  delete.sh  hash.sh  run.sh
nodes/: '  .add_node.py.swn  .add_node.py.swo  Makefile  README.md  add_node  add_node.py  columns.py  con.py  cons_group.drawio  ip.yaml  ip.yaml.in  mod.py  parse.py  scheme.py  test.py
nodes/algo/: con.py  test.py
scripts/: .add_node.py.swl  .add_node.py.swm  3  add_node.py  columns.py  ip.yaml  ip.yaml.in  notice.py  requirements.txt  test.py
scripts/ad2b/: .columns.py.swo  __main__.py  add_node  add_node.py  columns.py  ip.yaml  ip.yaml.in  main.py  notice.py  parse.py  ping.py  userpass.py
src/: add_node  ip.yaml  ip.yaml.in  iwai.txt  notice.sh
src/ad2b.egg-info/: PKG-INFO  (+3 more)
test/: Makefile  cluster.yaml  cluster.yaml.in  clutest  notice.sh  numdata.yaml  ops.yaml  ops.yaml.in
(+43 files in other folders)
