[metadata]
name = ad2b
version = 0.0.1
description = Sharding Database Tool
long_description = file: README.md
author = Tatsuya.S
license_file = LICENSE

[options]
packages = find:
package_dir = = src
zip_safe = False
entry_points = file: entry_points.cfg
include_package_data = True
python_requires = >= 3.6

[options.packages.find]
where = src
